# ChangeLog for app-arch/pbzip2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/ChangeLog,v 1.106 2012/07/29 21:52:44 ottxor Exp $

  29 Jul 2012; Christoph Junghans <ottxor@gentoo.org> pbzip2-1.1.6.ebuild:
  added prefix keywords

  15 Jul 2012; Mike Frysinger <vapier@gentoo.org> pbzip2-1.1.6.ebuild:
  Depend on bzip2[static-libs] when USE=static.

  30 Dec 2011; Mark Loeser <halcy0n@gentoo.org> pbzip2-1.1.5.ebuild:
  Stable for ppc/ppc64; bug #381623

*pbzip2-1.1.6 (02 Nov 2011)

  02 Nov 2011; Mike Frysinger <vapier@gentoo.org> +pbzip2-1.1.6.ebuild,
  +files/pbzip2-1.1.6-makefile.patch:
  Version bump.

  23 Oct 2011; Raúl Porcel <armin76@gentoo.org> pbzip2-1.1.5.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #381623

  04 Oct 2011; Jeroen Roovers <jer@gentoo.org> pbzip2-1.1.5.ebuild:
  Stable for HPPA (bug #381623).

  18 Sep 2011; Markus Meier <maekke@gentoo.org> pbzip2-1.1.5.ebuild:
  arm stable, bug #381623

  04 Sep 2011; Tony Vroon <chainsaw@gentoo.org> pbzip2-1.1.5.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo,
  Tomáš "Mepho" Pružina & Ian "idella4" Delaney in bug #381623 filed by Mike
  "SpanKY" Frysinger.

  04 Sep 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> pbzip2-1.1.5.ebuild:
  x86 stable wrt bug #381623

  02 Sep 2011; Mike Frysinger <vapier@gentoo.org>
  files/pbzip2-1.1.2-makefile.patch, pbzip2-1.1.5.ebuild:
  Fix broken USE=static handling and respect env CPPFLAGS.

*pbzip2-1.1.5 (02 Aug 2011)

  02 Aug 2011; Dror Levin <spatz@gentoo.org> +pbzip2-1.1.5.ebuild:
  Version bump, bug 377239.

*pbzip2-1.1.4 (17 May 2011)

  17 May 2011; Dror Levin <spatz@gentoo.org> -pbzip2-1.1.2.ebuild,
  +pbzip2-1.1.4.ebuild:
  Version bump, bug 363191. Also hopefully fixes 320313. Drop old.

*pbzip2-1.1.2 (20 Feb 2011)

  20 Feb 2011; Dror Levin <spatz@gentoo.org> -pbzip2-1.0.5-r2.ebuild,