@@ -1,0 +1,41 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/pbzip2-1.1.8.ebuild,v 1.1 2012/08/06 23:19:24 radhermit Exp $
+
+EAPI=4
+
+inherit flag-o-matic eutils
+
+DESCRIPTION="Parallel bzip2 (de)compressor using libbz2"
+HOMEPAGE="http://compression.ca/pbzip2/"
+SRC_URI="https://launchpad.net/pbzip2/${PV:0:3}/${PV}/+download/${P}.tar.gz"
+
+LICENSE="PBZIP2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos"
+IUSE="static symlink"
+
+LIB_DEPEND="app-arch/bzip2[static-libs(+)]"
+RDEPEND="!static? ( ${LIB_DEPEND//\[static-libs(+)]} )"
+DEPEND="${RDEPEND}
+	static? ( ${LIB_DEPEND} )"
+
+src_prepare() {
+	epatch "${FILESDIR}"/${PN}-1.1.6-makefile.patch
+	tc-export CXX
+	use static && append-ldflags -static
+}
+
+src_install() {
+	dobin pbzip2
+	dodoc AUTHORS ChangeLog README
+	doman pbzip2.1
+	dosym pbzip2 /usr/bin/pbunzip2
+
+	if use symlink ; then
+		local s
+		for s in bzip2 bunzip2 bzcat ; do
+			dosym pbzip2 /usr/bin/${s}
+		done
+	fi
+}
