@@ -1,6 +1,12 @@
 # ChangeLog for app-arch/pbzip2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/ChangeLog,v 1.106 2012/07/29 21:52:44 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/ChangeLog,v 1.107 2012/08/06 23:19:24 radhermit Exp $
+
+*pbzip2-1.1.8 (06 Aug 2012)
+
+  06 Aug 2012; Tim Harder <radhermit@gentoo.org> +pbzip2-1.1.8.ebuild,
+  metadata.xml:
+  Version bump (bug #413873). Add myself as a maintainer.
 
   29 Jul 2012; Christoph Junghans <ottxor@gentoo.org> pbzip2-1.1.6.ebuild:
   added prefix keywords
